# ChangeLog for dev-python/disqus-python
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Jun 2013; Justin Lecher <jlec@gentoo.org> disqus-python-0.4.2.ebuild,
  metadata.xml:
  Bump to EAPI=5 and new python r1 eclasses
